新增歌词控件滚动暂停功能